SJ-188: + swagger to auth api
